Fixed landing page bug, causing image overflow

--- a/src/style/components/_player.scss
+++ b/src/style/components/_player.scss
@@ -1,5 +1,7 @@
 
 #player-wrapper {
+    display: none; // flex
+
     max-width: 450px;
     width: 100%;
     height: 100%;
@@ -7,7 +9,6 @@
     right: 0px;
     top: 0px;
     z-index: 3;
-    display: flex;
     flex-direction: column;
     justify-content: space-between;
     background-color: rgba($c-t-2, 0.6);
