--- a/src/style/pages/_home.scss
+++ b/src/style/pages/_home.scss
@@ -1,32 +1,21 @@
-#home {
 
-}
 
 //==================================================================
-.home-hero {
-    height: 100vh;
-}
-
     .home-hero {
-        display: flex;
         align-items: center;
         background: linear-gradient(to left,#ff9d6c,#bb4e75);
+        overflow: hidden;
     }
 
     .home-des {
-        position: relative;
-        z-index: 3;
-        margin-left: 8vw;
+        position: absolute;
+        top: 40%;
+        left: 8%;
     }
 
-        .home-h1-wrapper {
-            position: relative;
-            overflow: hidden;
-        }
-
-        .home-des .text-h1 {
-            color: $c-w-5;
-            opacity: 0.8;
+        .text-h1 {
+            color: $c-w-1;
+            opacity: 0.9;
         }
 
     #home-hero-img {
@@ -35,10 +24,8 @@
         mix-blend-mode: luminosity;
         opacity: 0;
         animation-name: imgFadein;
-        animation-duration: 4s;
+        animation-duration: 6s;
         animation-fill-mode: forwards;
-        position: absolute;
-        background-position: -100px;
         background-size: cover;
     }
 
@@ -46,7 +33,7 @@
     @keyframes imgFadein {
         0% {
             opacity: 0;
-            transform: scale(1.15) translateY(-25px);
+            transform: scale(1.15) translateY(-20px);
         }
         100% {
             opacity: 0.2;
